--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,11 @@
     <string name="title_activity_titlescreen">TitlescreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="expand">expand</string>
+    <string name="shrink">shrink</string>
+    <string name="tips">This is a custom TextView that can be expanded with a smooth transition animation,you can set the number of lines to expand,change its icon or text and so on\n</string>
+    <string name="tips_short">Hello there,i am a short text for test</string>
+    <string name="go_to_normal_mode">go to normal mode</string>
+    <string name="go_to_recycler_view_mode">go to recycler view mode</string>
+
 </resources>
