--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="go_to_normal_mode">go to normal mode</string>
     <string name="go_to_recycler_view_mode">go to recycler view mode</string>
     <string name="home_page_description_text">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur mattis eros, at eleifend nibh imperdiet finibus. Mauris et est id ante rutrum consectetur nec nec dui. Sed nisl ex, aliquet eget faucibus vitae, placerat id lacus. <a href="http://google.com">Learn More</a></string>
+    <string name="title_activity_create_fundraiser">CreateFundraiserActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
